Apply more suggestions